<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/granat"
    tools:context=".ActivityVerify">

    <Button
        android:id="@+id/btn_Clear"
        android:layout_width="241dp"
        android:layout_height="45dp"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:backgroundTint="#1DCB8F"
        android:onClick="onClick_btn_Clear"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Check" />

    <TextView
        android:id="@+id/textView_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="152dp"
        android:focusableInTouchMode="false"
        android:text="@string/select_sex"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_date2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="307dp"
        android:layout_height="54dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_Check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_text4">

        <RadioButton
            android:id="@+id/radioButton_woman2"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="checkButton"
            android:text="@string/woman"
            android:textColor="#FFF"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="499dp" />

        <RadioButton
            android:id="@+id/radioButton_man2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="checkButton"
            android:text="@string/man"
            android:textColor="#FFF"
            tools:layout_editor_absoluteX="154dp" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_DatePicker2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="88dp"
        android:backgroundTint="#1DCB8F"
        android:onClick="onClick_btn_DatePicker"
        android:text="@string/select_birth"
        app:layout_constraintBottom_toTopOf="@+id/textView_date2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Pesel" />

    <TextView
        android:id="@+id/textView_date2"
        android:layout_width="227dp"
        android:layout_height="25dp"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="92dp"
        android:focusableInTouchMode="false"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_text4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_DatePicker2" />

    <TextView
        android:id="@+id/textView_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginEnd="107dp"
        android:focusableInTouchMode="false"
        android:text="@string/enter_pesel"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_Pesel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_text" />

    <TextView
        android:id="@+id/textView_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="79dp"
        android:focusableInTouchMode="false"
        android:text="@string/verify_pesel"
        android:textAlignment="center"
        android:textColor="@color/mint"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_text3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Check"
        android:layout_width="241dp"
        android:layout_height="45dp"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:backgroundTint="#1DCB8F"
        android:onClick="onClick_btn_Check"
        android:text="@string/check"
        app:layout_constraintBottom_toTopOf="@+id/btn_Clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/editText_Pesel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pesel"
        android:inputType="number"
        android:maxLength="11"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/mint"
        app:layout_constraintBottom_toTopOf="@+id/btn_DatePicker2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_text3" />

</androidx.constraintlayout.widget.ConstraintLayout>