<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/granat"
    tools:context=".UpdatePerson_Activity">

    <TextView
        android:id="@+id/textView_text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:text="@string/update_personal_data"
        android:textAlignment="center"
        android:textColor="@color/mint"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/eT_updateId"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <EditText
        android:id="@+id/eT_updateId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="number"
        android:onClick="OnClick_btn_Update"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/mint"
        app:layout_constraintBottom_toTopOf="@+id/eT_updateName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_text7"
        app:layout_constraintVertical_bias="0.113"
        android:autofillHints="" />

    <EditText
        android:id="@+id/eT_updateName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/mint"
        app:layout_constraintBottom_toTopOf="@+id/eT_updateSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_updateId"
        app:layout_constraintVertical_bias="0.084"
        android:autofillHints="" />

    <EditText
        android:id="@+id/eT_updateSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/mint"
        app:layout_constraintBottom_toTopOf="@+id/eT_updateAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_updateName"
        app:layout_constraintVertical_bias="0.094"
        android:autofillHints="" />

    <EditText
        android:id="@+id/eT_updateAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/mint"
        app:layout_constraintBottom_toTopOf="@+id/eT_updateEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_updateSurname"
        app:layout_constraintVertical_bias="0.143"
        android:autofillHints="" />

    <EditText
        android:id="@+id/eT_updateEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/mint"
        app:layout_constraintBottom_toTopOf="@+id/btn_Update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_updateAge"
        app:layout_constraintVertical_bias="0.232"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_Update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#1DCB8F"
        android:onClick="OnClick_btn_Update"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_updateEmail"
        app:layout_constraintVertical_bias="0.389" />

</androidx.constraintlayout.widget.ConstraintLayout>