<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/granat"
    tools:context=".ActivityGenerator">

    <Button
        android:id="@+id/btn_DatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginEnd="119dp"
        android:backgroundTint="#1DCB8F"
        android:onClick="onClick_btn_DatePicker"
        android:text="@string/select_birth"
        app:layout_constraintBottom_toTopOf="@+id/textView_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_text1" />

    <TextView
        android:id="@+id/textView_date"
        android:layout_width="227dp"
        android:layout_height="25dp"
        android:focusableInTouchMode="false"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_text2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_DatePicker"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/textView_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:text="@string/generator_pesel"
        android:textAlignment="center"
        android:textColor="@color/mint"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_DatePicker"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/textView_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:text="@string/select_sex"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_date"
        app:layout_constraintVertical_bias="0.113" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="308dp"
        android:layout_height="51dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_Generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_text2"
        app:layout_constraintVertical_bias="0.065">

        <RadioButton
            android:id="@+id/radioButton_woman"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="checkButton"
            android:text="@string/woman"
            android:textColor="#FFF"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="499dp" />

        <RadioButton
            android:id="@+id/radioButton_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="checkButton"
            android:text="@string/man"
            android:textColor="#FFF" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_Clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginEnd="119dp"
        android:backgroundTint="#1DCB8F"
        android:onClick="onClick_btn_Clear"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_result" />

    <Button
        android:id="@+id/btn_Generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginEnd="119dp"
        android:backgroundTint="#1DCB8F"
        android:onClick="onClick_btn_Generate"
        android:text="@string/generate_pesel"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.195" />

    <TextView
        android:id="@+id/textView_result"
        android:layout_width="245dp"
        android:layout_height="35dp"
        android:focusableInTouchMode="false"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textIsSelectable="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_Clear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Generate"
        app:layout_constraintVertical_bias="0.17" />

</androidx.constraintlayout.widget.ConstraintLayout>